Title change to TRAVIS FLAK'S RESUME

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TRAVIS FLAK</title>
+    <title>TRAVIS FLAK'S RESUME</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   
