--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>TRAVIS FLAK'S RESUME</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <h1>TRAVIS FLAK</h1>
-  <h2>15120 Oakland Ave, Burnsville, MN 55306
-    651.202.6339 ♦ tflak29@gmail.com</h2>
+  <h1><center>TRAVIS FLAK</center></h1>
+  <h2><center>15120 Oakland Ave, Burnsville, MN 55306
+    651.202.6339 ♦ tflak29@gmail.com</center></h2>
   
   <body>
     <p>That should get you started!</p>
