--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>TRAVIS FLAK'S RESUME</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <h1><center>TRAVIS FLAK</center></h1>
+  <h1><img src="headshot.jpg"><center>TRAVIS FLAK</center></h1>
   <h2><center>15120 Oakland Ave, Burnsville, MN 55306</center>
     <center>651.202.6339 ♦ tflak29@gmail.com</center></h2>
   
