Final code from Atom

--- a/index.html
+++ b/index.html
@@ -1,14 +1,114 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TRAVIS FLAK'S RESUME</title>
+    <title>TRAVIS FLAK</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <h1><img src="headshot.jpg"><center>TRAVIS FLAK</center></h1>
-  <h2><center>15120 Oakland Ave, Burnsville, MN 55306</center>
-    <center>651.202.6339 ♦ tflak29@gmail.com</center></h2>
-  
-  <body>
-    <p>That should get you started!</p>
+<body>
+  <div>
+    <img src="./headshot.jpg">
+  </div>
+    <h2>TRAVIS FLAK</h2>
+    <h3>15120 Oakland Ave, Burnsville, MN 55306<br>651.202.6339 ♦ tflak29@gmail.com</br></h3>
+    <p1><b>SUMMARY</b></p1>
+      <ul>
+        <li>Dedicated people leader, tenacious individual contributor, self-starter with a strong
+        and collaborative work ethic</li>
+        <li>Inside sales professional</li>
+        <li>Lead nurturing and qualification professional with a track record of growing revenue</li>
+        <li>Experience with Account Based Marketing tactics</li>
+        <li>Marketing and Sales tech stack expertise: Salesforce, Pardot, Hubspot, LinkedIn
+          Sales Navigator, Data.com, Insideview, Cirrus Insights, RingDNA, and Zoomimfo</li>
+          <li>Experience developing strategy and executing inbound and outbound marketing and
+            sales campaigns</li>
+            <li>Skilled in Consultative Selling approaches</li>
+            <li>Fluent in custom software, digital transformation, and digital marketing terminology</li>
+            <li>Proficient in both Google G Suite and Microsoft Office Suite</li>
+      </ul>
+    <p2><b>PROFESSIONAL EXPERIENCE</b></p2>
+      <ul>SILVERLINE<br>Feb. 2019 – Sept. 2019</br><br><b>Manager, Business Development:</b></br>
+        <li>Managed a team of four SDRs to achieve their individual and team goals</li>
+        <li>On-boarding and proficiency training of all SDRs in outbound business development</li>
+        <li>Metrics and KPI tracking and reporting to leadership team</li>
+        <li>Reviewed various sales tools and qualified packaged software vendors</li>
+        <li>Drove an increased velocity of outbound calls and emails for SDRs metrics</li>
+        <li>Strategized and wrote messaging scripts and email templates for SDRs</li>
+        <li>Created and implemented the first progression documentation and call reviews process for individual SDRs</li>
+        <li>Achieved Q2 goal</li>
+      </ul>
+      <ul><b>Sales Development Team Lead:</b>
+        <li>Player-coach role for a team of four SDRs to achieve their individual and team goals</l1>
+        <li>On-boarding and proficiency training of all SDRs in outbound business development</li>
+        <li>Metrics and KPI tracking and reporting to leadership team</li>
+        <li>Reviewed various sales tools and qualified packaged software vendors</li>
+        <li>Strategized and wrote messaging scripts and email templates for SDRs</li>
+        <li>Implemented a writing and rhetoric course for SDRs to improve their presentation
+          and communication skillsets</li>
+        <li>Managed and qualified inbound leads</li>
+        <li>Generated an initial 30K managed services engagement resulting in a forecasted
+          500K phase 2</li>
+        <li>Achieved Q1 goal</li>
+        <li>Promoted to Manager, Business Development after 3 months of employment</li>
+      </ul>
+      <ul>NERDERY<br>2012 – 2019</br><br><b>Client Development Manager & Account Based Marketing BDR:</b></br>
+        <li>Managed all inbound lead traffic for Nerdery generating $1,800,000 in sales in 2018</li>
+        <li>As part of the Account Based Marketing team, tripled revenue of target account after
+          executing on ABM strategy and <br>penetrated new divisions within key account that had
+          previously never done business with Nerdery</br></li>
+        <li>Conducted all needed background research on marketing qualified leads prior to
+          contacting individuals</li>
+        <li>Provided field feedback to Marketing on messaging, campaigns, collateral and
+          search engine optimization</li>
+        <li>Liaison between Sales, Marketing and IT on marketing automation and CRM
+          optimization needs</li>
+        <li>Responsible for all Client Development KPI and metrics tracking</li>
+      </ul>
+      <ul><b>Business Development Supervisor:</b>
+        <li>Implemented the first Business Development team for Nerdery</li>
+        <li>Managed a team of four to achieve their individual and team goals</li>
+        <li>On-boarding and proficiency training of all BDRs in inbound and outbound business
+          development</li>
+          <li>Metrics and KPI tracking and reporting to leadership team</li>
+          <li>Salesforce.com leadership training</li>
+          <li>Drove increased velocity of leads resulting in over 250 Sales Accepted Opportunities</li>
+      </ul>
+      <ul><b>Senior Audience Outreach Representative (AOR) and Audience Outreach
+        Associate:</b>
+        <li>Exceeded individual quarterly goals six out of eight quarters</li>
+        <li>Most New Clients Generated Award six times</li>
+        <li>Employee of the Month (January 2015, September 2015)</li>
+        <li>Generated 384 Sales Accepted Opportunities in a two year period</li>
+        <li>Generated over $15,000,000 in sales opportunities</li>
+        <li>Contributed to increasing the client first order size by 147% through rigorous
+          qualification and nurturing</li>
+        <li>Drove brand awareness and knowledge using numerous outreach techniques</li>
+        <li>Acted as an ambassador for the Nerdery brand through online, phone and off-line
+          (event and trade show) communications</li>
+        <li>Member of cross functional, strategic initiative teams such as: AEM New Business,
+          and Retail Practice</li>
+        <li>Based on performance, promoted twice within a two year period</li>
+      </ul>
+      <ul><b>Inside Sales Representative:</b>
+        <li>Generated $200,000 in sales first month in position</li>
+        <li>Conducted ~80 cold calls per day</li>
+      </ul>
+      <ul><b>Operations and Catering Division (OCD):</b>
+        <li>Executed internal catering for events</li>
+        <li>Planned and executed company-wide events</li>
+        <li>Vendor qualification and management</li>
+        <li>Ordered, stocked, and maintained kitchen areas</li>
+      </ul>
+      <ul><b>Housekeeper:</b>
+        <li>Maintained and cleaned kitchen areas and conference rooms</li>
+      </ul>
+  <p3><b>EDUCATION</b></p3>
+      <ul>Bachelor of Fine Arts, College of Visual Arts, St. Paul, MN</ul>
+  <p4><b>TRAINING and CONFERENCES</b></p4>
+      <ul>HIPAA Certification, Agile basics, Slattery Consultative
+        Selling Program, Challenger Selling, Hubspot Academy, CONNECT Mobile Conference,
+        <br>Grovo Security Best Practices Course, Sandler Sales Training, Financial Services and
+        Healthcare Industries Trailhead</br></ul>
+  <p4><b>REFERENCES</b></p4>
+      <ul>Available upon request</ul>
   </body>
 </html>
