--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   <div>
-    <img src="./travisflak.github.io/blob/master/headshot.jpg">
+    <img src="https://github.com/travisflak/travisflak.github.io/blob/master/headshot.jpg">
   </div>
     <h2>TRAVIS FLAK</h2>
     <h3>15120 Oakland Ave, Burnsville, MN 55306<br>651.202.6339 ♦ tflak29@gmail.com</br></h3>
